--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -55,15 +55,15 @@
                     </div>
                 <% } %>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <% if (users.length > 0) { %>
-                        <% users.forEach((user, index) => { %>
+                    <% if (user) { %>
+                        
                             <div class="col">
                                 <div class="card">
-                                    <img src="<%= user.image %>" class="card-img-top" alt="...">
+                                    <img src="" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title"><%= user.name %></h5>
+                                        <h5 class="card-title"><%= user.username %></h5>
                                         <p class="card-text"><strong>Email:</strong> <%= user.email %></p>
-                                        <p class="card-text"><strong>Phone:</strong> <%= user.phone %></p>
+                                        <p class="card-text"><strong>Phone:</strong> </p>
                                         <div class="d-flex justify-content-end">
                                             <a href="/edit/<%= user._id %>" class="btn btn-success btn-edit"><i class="fas fa-edit"></i> Edit</a>
                                             <a href="/delete/<%= user._id %>" class="btn btn-danger ms-2 btn-delete"><i class="fas fa-trash"></i> Delete</a>
@@ -71,7 +71,7 @@
                                     </div>
                                 </div>
                             </div>
-                        <% }) %>
+                         %>
                     <% } else { %>
                         <div class="col">
                             <h4 class="text-center text-secondary mt-5">No users found in the database</h4>
